# trading-terminal

./: .gitignore  CLAUDE.md  pyproject.toml  run.py  start.sh
backend/: app.py  config.py  dependencies.py  lazy_import.py  security.py
backend/routes/: markets.py  orders.py  positions.py
backend/services/: order_service.py
backend/ws/: manager.py  stream_hub.py
configs/: defaults.yaml
docs/: PLAN.md
frontend/: dev.sh  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/api/: client.ts
frontend/src/lib/components/: MarketSelector.svelte  OrderBook.svelte  OrderEntry.svelte  RestingOrders.svelte  StatsBar.svelte  TradeTape.svelte
frontend/src/lib/stores/: markets.ts  orderbook.ts  orders.ts  trades.ts
frontend/src/lib/ws/: client.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
